--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev:1": "node --watch .\\clase-2\\1.http.js",
+    "dev:2": "node --watch .\\clase-2\\2.routing.js"
   },
   "keywords": [],
   "author": "",
