--- a/clase-3/package.json
+++ b/clase-3/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "4.19.2"
+    "express": "4.19.2",
+    "zod": "3.23.8"
   }
 }
