Dependency Injection (DI) design pattern added to the API

--- a/clase-5/package.json
+++ b/clase-5/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "start:mysql": "node --watch ./server-with-mysql.js",
+    "start:local": "node --watch ./server-with-local.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
