--- a/clase-6/package.json
+++ b/clase-6/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "4.19.2"
+    "express": "4.19.2",
+    "morgan": "1.10.0"
   }
 }
