--- a/clase-6/package.json
+++ b/clase-6/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@libsql/client": "^0.9.0",
+    "dotenv": "^16.4.5",
     "express": "4.19.2",
     "morgan": "1.10.0",
     "socket.io": "4.7.5"
